social media icons styling

--- a/blog-posts/web-development.html
+++ b/blog-posts/web-development.html
@@ -47,17 +47,17 @@
         <section class="author-details-section">
             <img src="../assets/images/blogger-1.jpg" alt="mark image">
             <div class="author-details">
-                <p class="author-name">Mark Oliver</p>
+                <h6 class="author-name">Mark Oliver</h6>
                 <p class="author-title">Web Developer <a href="http://udacity.com">@Udacity</a></p>
                 <p class="author-bio">Web Developer with over 10 years of experience, passionate about web development
                     especially frontend development</p>
                 <p>
                     <a href="http://www.facebook.com/"><img class="author-social"
                             src="https://cdn1.iconfinder.com/data/icons/social-media-set-for-free/32/facebook-512.png"
-                            alt="facebook" srcset=""> </a>
+                            alt="facebook"> </a>
                     <a href="http://www.twitter.com/"><img class="author-social"
                             src="https://iconarchive.com/download/i80497/uiconstock/socialmedia/Twitter.ico"
-                            alt="twitter" srcset=""> </a>
+                            alt="twitter"> </a>
                 </p>
 
             </div>
