social links update

--- a/blog-posts/mobile-development.html
+++ b/blog-posts/mobile-development.html
@@ -38,7 +38,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium adipisci reprehenderit
                 ratione, molestias atque nobis voluptatibus repellendus enim itaque iusto quidem fugit sint hic tempore,
                 ab ad? Ex, quo.
-                <br />
+                <br>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit assumenda ducimus soluta nisi quae, ipsa
                 nesciunt porro deleniti rem, optio in eos fugit accusamus nemo non repellat mollitia vitae. Sint.
             </p>
@@ -47,18 +47,18 @@
         <section class="author-details-section">
             <img src="../assets/images/blogger-2.jpg" alt="ashly image">
             <div class="author-details">
-                <p class="author-name">Ashly Chris</p>
+                <h6 class="author-name">Ashly Chris</h6>
                 <p class="author-title">Mobile App Developer <a href="http://www.google.com">@Google</a></p>
                 <p class="author-bio">Mobile App Developer with over 7 years of experience, passionate about Android
                     Applications Development</p>
 
-                <p>
+                <p class="social-links">
                     <a href="http://www.facebook.com/"><img class="author-social"
                             src="https://cdn1.iconfinder.com/data/icons/social-media-set-for-free/32/facebook-512.png"
-                            alt="facebook" srcset=""> </a>
+                            alt="facebook"> </a>
                     <a href="http://www.twitter.com/"><img class="author-social"
                             src="https://iconarchive.com/download/i80497/uiconstock/socialmedia/Twitter.ico"
-                            alt="twitter" srcset="">
+                            alt="twitter">
                     </a>
                 </p>
             </div>
