--- a/blog-posts/web-development.html
+++ b/blog-posts/web-development.html
@@ -38,7 +38,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium adipisci reprehenderit
                 ratione, molestias atque nobis voluptatibus repellendus enim itaque iusto quidem fugit sint hic tempore,
                 ab ad? Ex, quo.
-                <br />
+                <br>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit assumenda ducimus soluta nisi quae, ipsa
                 nesciunt porro deleniti rem, optio in eos fugit accusamus nemo non repellat mollitia vitae. Sint.
             </p>
@@ -51,7 +51,7 @@
                 <p class="author-title">Web Developer <a href="http://udacity.com">@Udacity</a></p>
                 <p class="author-bio">Web Developer with over 10 years of experience, passionate about web development
                     especially frontend development</p>
-                <p>
+                <p class="social-links">
                     <a href="http://www.facebook.com/"><img class="author-social"
                             src="https://cdn1.iconfinder.com/data/icons/social-media-set-for-free/32/facebook-512.png"
                             alt="facebook"> </a>
